[package]
name = "backend"
version = "0.1.0"
authors = ["Emil Majchrzak <majchrzamemil@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8" , features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
actix-web = "3.2"
actix = "0.4"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
dotenv = "0.10"
actix-rt = "1.0.0"
serde_json = "1.0"
serde = "1.0"
rand = "0.7.2"
rust-argon2 = "0.6.0"
jwt = "0.11.0"
sha2 = "*"
hmac = "0.9"
env_logger = "0.8.2"
actix-web-httpauth = "0.5.0"
log = "0.4.11"
derive_more = "0.99.11"
chrono = "0.4.0"
juniper = { version = "0.14.2" }
futures-util = "0.3.12"
